# my_bot

./: CMakeLists.txt  README.md  package.xml
2026Rover_description/2026Rover_description/launch/: controller.launch  controller.yaml
config/: my_controller.yaml  my_controllers.yaml  ps4_teleop.yaml
description/: gazebo_contol.xacro  gazebo_control.xacro  materials.xacro  robot.urdf.xacro  robot_core.xacro  robot_core.xacro.xml  ros2_control.xacro  trans.xacro
launch/: 2026_launch_sim.launch.py  controller.launch  display.launch  gazebo.launch  launch_sim.launch.py  launch_sim.py  rsp.2026launch.py  rsp.launch.py
urdf/: URDF.gazebo  URDF.trans  URDF.xacro
worlds/: empty.sdf  empty.world
